Circle CI can now run tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ jobs:
       - image: cimg/openjdk:17.0
     
     steps:
+      - checkout
             # Run your tests!
       - run:
           name: Test
