--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.datasource.url=jdbc:mysql://localhost:3306/bliss_bites
 spring.datasource.username=user
 spring.datasource.password=password1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 server.port=8081
